professor-guided touches